--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Aspire Demo</title>
+    <meta charset="UTF-8">
+    <title>welcome</title>
 </head>
 <body>
-<form action="addDevice.do" method="post">
-<!-- <div> -->
-<!-- <label>设备ID:</label><input type="text" name="deviceId" value="deviceId"> -->
-<!-- <br/> -->
-<!-- <label>版本:</label><input type="text" name="firmVersion" value="version"> -->
-<!-- <br/> -->
-<!-- <label>名称：</label><input type="text" name="deviceName" value="deviceName"> -->
-<!-- <br/> -->
-<!-- </div> -->
-<th>设备ID:<input type="text" name="deviceId" value="deviceId"></th>
-<th>版本:<input type="text" name="firmVersion" value="version"></th>
-<th>名称:<input type="text" name="deviceName" value="deviceName"></th>
-<th><input type="submit" value="添加临时设备"></th>
-</form> 
-<br/>
-<form action="selectAllDevice.do" method="post">
-<input type="submit" value="查询">
-</form>
+<div class="jumbotron text-center">
+    <h1>My First Bootstrap Page</h1>
+    <p>Resize this responsive page to see the effect!</p>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <h3>Column 1</h3>
+            <p>Lorem ipsum dolor..</p>
+            <p>Ut enim ad..</p>
+        </div>
+        <div class="col-sm-4">
+            <h3>Column 2</h3>
+            <p>Lorem ipsum dolor..</p>
+            <p>Ut enim ad..</p>
+        </div>
+        <div class="col-sm-4">
+            <h3>Column 3</h3>
+            <p>Lorem ipsum dolor..</p>
+            <p>Ut enim ad..</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
